# supersonic-effects

./: .gitignore  .gitlab-ci.yml  CITATION.ccf  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint_and_test.yml
data/: sensitivity_ozone.csv  sensitivity_ozone_jvh.csv  sensitivity_radiative_forcing.csv  taylor_param.csv  taylor_param_ozone.csv
resources/: taylor_param_radiative_forcing.csv
src/: example.py  main.py
src/ozone_model/: model.py  read_data.py  taylor_model.py
src/response_model/: read_data.py  taylor_model.py
src/response_model/data/: sensitivity_radiative_forcing.csv
src/scripts/: example.py  test_altitude.py  test_emission.py  testtt.py
tests/: test_model.py  test_validate_altitude_term.py  test_validate_emission_term.py  test_validation.py
