[project]
name = "ozone_model"
version = "0.1"
description = "Modeling ozone changes from supersonic aircraft emissions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["ozone_model"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
