[project]
name = "ozone_model"
version = "0.1"
description = "Modeling ozone changes from supersonic aircraft emissions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "pytest",
    "pytest-cov",
    "ruff"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
